--- a/pallets/polkadex-ido/rpc/Cargo.toml
+++ b/pallets/polkadex-ido/rpc/Cargo.toml
@@ -17,4 +17,5 @@ sp-api = {   git = "https://github.com/paritytech/substrate", branch = "polkadot
 sp-runtime = {   git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19", default-features = false }
 pallet-polkadex-ido-primitives = {path = "../common", default-features = false}
 polkadex-ido-runtime-api = {path = "runtime-api" }
-polkadex-primitives = { git = "https://github.com/Polkadex-Substrate/polkadex-primitives.git",  branch="polkadot-v0.9.19" , default-features = false }
+polkadex-primitives = { default-features = false, branch = "gj-test-old-scale-info", git = "https://github.com/Polkadex-Substrate/polkadex-primitives.git" }
+#polkadex-primitives = { git = "https://github.com/Polkadex-Substrate/polkadex-primitives.git",  branch="polkadot-v0.9.19" , default-features = false }
