--- a/pallets/polkadex-ido/common/Cargo.toml
+++ b/pallets/polkadex-ido/common/Cargo.toml
@@ -14,7 +14,7 @@ sp-core = {   git = "https://github.com/paritytech/substrate", branch = "polkado
 sp-std = {  git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19", default-features = false }
 sp-runtime = {   git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19", default-features = false }
 #polkadex-primitives = { git = "https://github.com/Polkadex-Substrate/polkadex-primitives.git",  branch="polkadot-v0.9.19", default-features = false }
-polkadex-primitives = { default-features = false, branch = "gj-test-old-scale-info", git = "https://github.com/Polkadex-Substrate/polkadex-primitives.git" }
+polkadex-primitives = { default-features = false, branch = "polkadot-v0.9.19", git = "https://github.com/Polkadex-Substrate/polkadex-primitives.git" }
 
 [features]
 default = ["std"]
