--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -94,7 +94,7 @@ orml-vesting = { git = "https://github.com/Polkadex-Substrate/open-runtime-modul
 
 # Local Dependecies
 #polkadex-primitives = { git = "https://github.com/Polkadex-Substrate/polkadex-primitives.git", branch = 'polkadot-v0.9.19', default-features = false }
-polkadex-primitives = { default-features = false, branch = "gj-test-old-scale-info", git = "https://github.com/Polkadex-Substrate/polkadex-primitives.git" }
+polkadex-primitives = { default-features = false, branch = "polkadot-v0.9.19", git = "https://github.com/Polkadex-Substrate/polkadex-primitives.git" }
 pdex-migration = { path = "../pallets/pdex-migration", default-features = false }
 polkadex-ido = { path = "../pallets/polkadex-ido", default-features = false }
 test-token-provider = { path = "../pallets/test-token-provider", default-features = false }
