fix: updating with latest primitives

--- a/.github/workflows/build-ci.yml
+++ b/.github/workflows/build-ci.yml
@@ -1,7 +1,7 @@
 name: Build-CI
 on:
   pull_request:
-    branches: [develop, main]
+    branches: [develop, main, fx-ocex-testing]
   push:
     branches: [develop, main]
 jobs:
