--- a/pallets/ocex/common/Cargo.toml
+++ b/pallets/ocex/common/Cargo.toml
@@ -13,7 +13,7 @@ serde = { version = "1.0.68", features = ["derive"], optional = true }
 sp-core = {   git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19", default-features = false }
 sp-std = {  git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19", default-features = false }
 sp-runtime = {   git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19", default-features = false }
-polkadex-primitives = { git = "https://github.com/Polkadex-Substrate/polkadex-primitives.git",  branch="fx-polkadot-v0.9.19", default-features = false }
+polkadex-primitives = { git = "https://github.com/Polkadex-Substrate/polkadex-primitives.git",  branch="polkadot-v0.9.19", default-features = false }
 
 [features]
 default = ["std"]
