--- a/pallets/ocex/rpc/Cargo.toml
+++ b/pallets/ocex/rpc/Cargo.toml
@@ -17,4 +17,4 @@ sp-api = {   git = "https://github.com/paritytech/substrate", branch = "polkadot
 sp-runtime = {   git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19", default-features = false }
 pallet-ocex-primitives = {path = "../common", default-features = false}
 pallet-ocex-lmp-runtime-api = {path = "runtime-api", default-features = false }
-polkadex-primitives = { git = "https://github.com/Polkadex-Substrate/polkadex-primitives.git",  branch="fx-polkadot-v0.9.19" , default-features = false }
+polkadex-primitives = { git = "https://github.com/Polkadex-Substrate/polkadex-primitives.git",  branch="polkadot-v0.9.19" , default-features = false }
