fix: testing on CI

--- a/.github/workflows/build-ci.yml
+++ b/.github/workflows/build-ci.yml
@@ -3,7 +3,7 @@ on:
   pull_request:
     branches: [develop, main, fx-ocex-testing]
   push:
-    branches: [develop, main]
+    branches: [develop, main, fx-ocex-withdrawal]
 jobs:
   build:
     runs-on: self-hosted
