--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,10 +7,10 @@ members = [
     'runtime',
     'pallets/pdex-migration',
     'pallets/polkadex-ido',
-    'pallets/ocex',
+#    'pallets/ocex',
 ]
 
 
 [patch."https://github.com/open-web3-stack/open-runtime-module-library.git"]
-orml-vesting = { git = "https://github.com/Polkadex-Substrate/open-runtime-module-library.git",  branch="polkadot-v0.9.19"}
+orml-vesting = { git = "https://github.com/Polkadex-Substrate/open-runtime-module-library.git",  branch="polkadot-v0.9.28"}
 
