Testing OCEX pallet  (#479)
* Updated OCEX Pallet

* Merged latest gj-ocex

* fix: allowing test tokens for a few assetids

* fix: update asset_id

* fix: update extrinsic

* fix: asset

* fix: token amount

* fix: updating asset amount

* fix: remove unwrap causing panic

* Refactor register_enclave

* Saved new chnages

* fix: updated mock environment

* fix: moved tests to mock

* add: pallet_timestamp dev deps

* fix: add tests module

* fix: add new test ext function

* fix: add dev dependency for testing

* add: single test for registering main account

* fix: add unit tests for extrinsics

* fix: add deposit tests

* fix: add tests for open_trading_pair extrinsic

* fix: add tests for close_trading_pair extrinsic

* fix: testing collect_fees extrinsic

* fix: add dev deps for MRR tests

* fix: add function to calculate MMR for accounts

* fix: add tests for submitting snapshot

* fix: submit_snapshot extrinsic

* fix: add tests for register_enclave extrinsic

* fix: add tests for shutdown

* fix: add event assertion in tests

* fix: ingress messages assertion in testcases

* fix: add bad origin test for shutdown

* fix: add bad origin test for withdrawal

* fix: add bad origin test for register_enclave

* fix: add bad origin test for submit_snapshot

* fix: add bad origin test for collect_fees

* fix: bad origin test for close trading pairs

* fix: bad origin test for open_trading_pair

* fix: bad origin test for deposit

* fix: bad origin test for register_trading_pair

* fix: bad origin test for add_proxy_account

* fix: bad origin test for register_main_account

* fix: add proxy limit test

* fix: add success withdrawal test

* fix: adding withdrawal test with a valid snapshot instance

* fix: updating lock file

* Update register_main_account to add proxy account correctly (#484)

* Integrated council governence

* Changed comment

* Added concil

* fix: ba

--- a/pallets/ocex/Cargo.toml
+++ b/pallets/ocex/Cargo.toml
@@ -13,25 +13,28 @@ readme = "README.md"
 targets = ["x86_64-unknown-linux-gnu"]
 
 [dependencies]
-codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false }
+codec = { package = "parity-scale-codec", version = "3", default-features = false }
 log = { version = "0.4.14", default-features = false }
 scale-info = { version = "2.0.1", default-features = false, features = ["derive"] }
-
-frame-benchmarking = { default-features = false, branch = "polkadot-v0.9.19", git = 'https://github.com/paritytech/substrate.git', optional = true }
-frame-support = { default-features = false, branch = "polkadot-v0.9.19", git = 'https://github.com/paritytech/substrate.git' }
-frame-system = { default-features = false, branch = "polkadot-v0.9.19", git = 'https://github.com/paritytech/substrate.git' }
-sp-io = { default-features = false, branch = "polkadot-v0.9.19", git = 'https://github.com/paritytech/substrate.git' }
-sp-runtime = { default-features = false, branch = "polkadot-v0.9.19", git = 'https://github.com/paritytech/substrate.git' }
-sp-std = { default-features = false, branch = "polkadot-v0.9.19", git = 'https://github.com/paritytech/substrate.git' }
-polkadex-primitives = { default-features = false, branch = "polkadot-v0.9.19", git = "https://github.com/Polkadex-Substrate/polkadex-primitives.git" }
-#polkadex-primitives = { default-features = false, path = "../../../polkadex-primitives" }
-sp-core = { branch = "polkadot-v0.9.19", git = 'https://github.com/paritytech/substrate.git', default-features = false }
-pallet-timestamp = { default-features = false, branch = "polkadot-v0.9.19", git = 'https://github.com/paritytech/substrate' }
-ias-verify = { version = "0.1.5", default-features = false, branch = "polkadot-v0.9.19", git = "https://github.com/Polkadex-Substrate/pallets" }
+frame-support = { default-features = false, branch = "polkadot-v0.9.28", git = 'https://github.com/paritytech/substrate.git' }
+frame-system = { default-features = false, branch = "polkadot-v0.9.28", git = 'https://github.com/paritytech/substrate.git' }
+sp-runtime = { default-features = false, branch = "polkadot-v0.9.28", git = 'https://github.com/paritytech/substrate.git' }
+sp-std = { default-features = false, branch = "polkadot-v0.9.28", git = 'https://github.com/paritytech/substrate.git' }
+polkadex-primitives = { default-features = false, branch = "polkadot-v0.9.28", git = "https://github.com/Polkadex-Substrate/polkadex-primitives.git" }
+pallet-timestamp = { default-features = false, branch = "polkadot-v0.9.28", git = 'https://github.com/paritytech/substrate' }
+ias-verify = { default-features = false,version = "0.1.4", branch = "polkadot-v0.9.28", git = "https://github.com/Polkadex-Substrate/pallets" }
+pallet-ocex-primitives = { path = "../../pallets/ocex/common", default-features = false}
 
 [dev-dependencies]
-pallet-balances = { branch = "polkadot-v0.9.19", git = 'https://github.com/paritytech/substrate.git' }
-pallet-assets = { branch = "polkadot-v0.9.19", git = 'https://github.com/paritytech/substrate.git' }
+pallet-balances = { branch = "polkadot-v0.9.28", git = 'https://github.com/paritytech/substrate.git' }
+pallet-assets = { branch = "polkadot-v0.9.28", git = 'https://github.com/paritytech/substrate.git' }
+pallet-timestamp = { branch = "polkadot-v0.9.28", git = 'https://github.com/paritytech/substrate.git' }
+sp-application-crypto = { branch="polkadot-v0.9.28", git = 'https://github.com/paritytech/substrate'}
+sp-keystore = { branch = "polkadot-v0.9.28",git = 'https://github.com/paritytech/substrate' }
+frame-benchmarking = { branch = "polkadot-v0.9.28", git = 'https://github.com/paritytech/substrate.git' }
+ckb-merkle-mountain-range = "0.5.0"
+anyhow = "1.0.56"
+sp-io = { default-features = false, branch = "polkadot-v0.9.28", git = 'https://github.com/paritytech/substrate.git' }
 
 [features]
 default = ["std"]
@@ -39,14 +42,14 @@ std = [
     "codec/std",
     "log/std",
     "scale-info/std",
-    "frame-benchmarking/std",
     "frame-support/std",
     "frame-system/std",
-    "sp-io/std",
     "sp-runtime/std",
     "sp-std/std",
-    "sp-core/std",
-    "polkadex-primitives/std"
+    "polkadex-primitives/std",
+    "pallet-timestamp/std",
+    "ias-verify/std",
+    "pallet-ocex-primitives/std"
 ]
 #TODO: [#435] Currently broken, will be fixed in different issue
 #runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
