--- a/pallets/ocex/common/Cargo.toml
+++ b/pallets/ocex/common/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "pallet-polkadex-ido-primitives"
+name = "pallet-ocex-primitives"
 version = "0.1.0"
 edition = "2021"
 
@@ -13,7 +13,6 @@ serde = { version = "1.0.68", features = ["derive"], optional = true }
 sp-core = {   git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28", default-features = false }
 sp-std = {  git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28", default-features = false }
 sp-runtime = {   git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28", default-features = false }
-#polkadex-primitives = { git = "https://github.com/Polkadex-Substrate/polkadex-primitives.git",  branch="polkadot-v0.9.28", default-features = false }
 polkadex-primitives = { default-features = false, branch = "polkadot-v0.9.28", git = "https://github.com/Polkadex-Substrate/polkadex-primitives.git" }
 
 [features]
