--- a/pallets/ocex/rpc/Cargo.toml
+++ b/pallets/ocex/rpc/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "polkadex-ido-rpc"
+name = "pallet-ocex-rpc"
 version = "0.1.0"
 edition = "2021"
 
@@ -8,13 +8,11 @@ edition = "2021"
 [dependencies]
 codec = { version = "3.0.0", package = "parity-scale-codec", default-features = false, features = ["derive"] }
 serde = { version = "1.0.68", optional = true }
-jsonrpc-core = "18.0.0"
-jsonrpc-core-client = "18.0.0"
-jsonrpc-derive = "18.0.0"
+jsonrpsee = { version = "0.15.1", features = ["server", "macros"] }
 sp-rpc = {   git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28",default-features = false }
 sp-blockchain = {   git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28", default-features = false }
 sp-api = {   git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28", default-features = false }
 sp-runtime = {   git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28", default-features = false }
-pallet-polkadex-ido-primitives = {path = "../common", default-features = false}
-polkadex-ido-runtime-api = {path = "runtime-api" }
+pallet-ocex-primitives = {path = "../common", default-features = false}
+pallet-ocex-runtime-api = {path = "runtime-api" }
 polkadex-primitives = { default-features = false, branch = "polkadot-v0.9.28", git = "https://github.com/Polkadex-Substrate/polkadex-primitives.git" }
