--- a/pallets/ocex/rpc/runtime-api/Cargo.toml
+++ b/pallets/ocex/rpc/runtime-api/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "polkadex-ido-runtime-api"
+name = "pallet-ocex-runtime-api"
 version = "0.1.0"
 edition = "2021"
 
@@ -9,11 +9,10 @@ edition = "2021"
 codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
 
 # Substrate Dependencies
-pallet-polkadex-ido-primitives= { default-features = false, path = "../../common" }
+pallet-ocex-primitives= { default-features = false, path = "../../common" }
 sp-api = {   git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28", default-features = false }
 sp-runtime = {  git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28", default-features = false }
 sp-std = {   git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.28", default-features = false }
-#polkadex-primitives = { git = "https://github.com/Polkadex-Substrate/polkadex-primitives.git",  branch="polkadot-v0.9.28" , default-features = false }
 polkadex-primitives = { default-features = false, branch = "polkadot-v0.9.28", git = "https://github.com/Polkadex-Substrate/polkadex-primitives.git" }
 [features]
 default = ["std"]
@@ -22,5 +21,5 @@ std = [
     "codec/std",
     "sp-std/std",
     "sp-runtime/std",
-    "pallet-polkadex-ido-primitives/std"
+    "pallet-ocex-primitives/std"
 ]
