--- a/.github/workflows/build-ci.yml
+++ b/.github/workflows/build-ci.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Build Project
         run: |
             cargo clean
-            cargo build --release --features runtime-benchmarks
+            # cargo build --release --features runtime-benchmarks
             cargo build
       - name: Test Project
         run: cargo test
