Added compiler flag to fail CI build on warnings

--- a/.github/workflows/build-ci.yml
+++ b/.github/workflows/build-ci.yml
@@ -40,7 +40,7 @@ jobs:
         run: |
           cargo clean
           # cargo build --release --features runtime-benchmarks
-          cargo build
+          RUSTFLAGS="-D warnings" cargo build
       - name: Check Formatting
         run: cargo fmt --check
       - name: Test Project
